20070315 version: loadso 0.1
20070315 code: fixed install
20070315 code: added ldflags
20070608 code: loadso-conf.c from common source
20080115 code: updated inst-check.c
20100310 code: new SYSDEPS
20100310 code: style checks, assertions, loadso_get_error()
20100310 code: loadso_sym -> loadso_symbol
20100310 code: loadso_func -> loadso_function
20100310 code: loadso_fp -> loadso_pointer_t
20100310 code: void * -> loadso_handle_t
20100311 code: imported installer 2.3.1
20100311 code: imported installer 2.3.2
20100311 code: imported new tools from cpj