@@ -7,7 +7,7 @@ typedef void * (*loadso_pointer_t) (void *);
 int loadso_open     (const char *, loadso_handle_t *);
 int loadso_symbol   (loadso_handle_t, const char *, void **);
 int loadso_function (loadso_handle_t, const char *, loadso_pointer_t *);
-int loadso_close    (loadso_handle_t);
+int loadso_close    (loadso_handle_t *);
 
 const char *loadso_error (void);
 void loadso_set_error (const char *);
